--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <img src="https://th.bing.com/th/id/OIP.t_vhTbpnDBLc2iY00PyOugAAAA?rs=1&pid=ImgDetMain" alt="image">
         <h4><a href=login.html>login</a></h4>
         <h4><a href="donate.html">donate</a></h4>
-        <h4>deliver</h4>
+        <h4><a href="delivery.html">track your food</a></h4>
+        <h4><a href="order.html">order</a></h4>
+        <h4><a href="sell.html">want to sell</a></h4>
         <h4><a href="payment.html">payment</a></h4>
         <h4><a href="index.html#about-us">about us</a></h4>
         <h4><a href="index.html#contact-us">contact us</a></h4>
