--- a/delivery.html
+++ b/delivery.html
@@ -20,7 +20,7 @@
       <p>Driver Phone: <span id="driverPhone"></span></p>
       
       
-      <div><img src="https://th.bing.com/th/id/OIP.WgxodMa1VM0PwycbVGAflQHaE8?rs=1&pid=ImgDetMain" alt="" style="height: 200px; width: 200px;"></div>
+      <div><p>driver photo:</p><img src="https://th.bing.com/th/id/OIP.WgxodMa1VM0PwycbVGAflQHaE8?rs=1&pid=ImgDetMain" alt="" style="height: 200px; width: 200px;"></div>
       <p>Driver Location: <span id="driverLocation"></span></p>
       <div id="map"></div>
     </div>
