--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h4><a href="delivery.html">track your food</a></h4>
         <h4><a href="order.html">order</a></h4>
         <h4><a href="sell.html">want to sell</a></h4>
-        <h4><a href="payment.html">payment</a></h4>
+        <h4><a href="feedback.html">need help</a></h4>
         <h4><a href="index.html#about-us">about us</a></h4>
         <h4><a href="index.html#contact-us">contact us</a></h4>
     </div>
