--- a/login.html
+++ b/login.html
@@ -14,10 +14,10 @@
       <hr>
   
       <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-      <button type="submit" class="registerbtn">Register</button>
+      <button type="submit" class="registerbtn"><a href="option.html">Register</a></button>
     </div>
   
     <div class="container signin">
-      <p>Already have an account? <a href="registeration.html">create new account</a>.</p>
+      <p>or create new account <a href="registeration.html">click here</a></p>
     </div>
   </form>
