--- a/order.html
+++ b/order.html
@@ -32,7 +32,7 @@
         </select>   
 
 
-        <button type="submit">Place Order</button>
+        <button type="submit"><a href="payment.html">Place Order</a></button>
     </form>   
 
 </body>
