--- a/registeration.html
+++ b/registeration.html
@@ -109,9 +109,7 @@
                 </option>
             </select>
 
-            <button type="submit">
-                Submit
-            </button>
+            <button type="submit"><a href="option.html">Submit</a></button>
         </form>
     </div>
 </body>
