--- a/sell.html
+++ b/sell.html
@@ -11,20 +11,28 @@
     <h1>Sell Your Food</h1>
 
     <form id="sellFoodForm">
+        <label for="name">enter your name:</label>
+        <input type="text" id="name" name="name" reqired>
+
+        <label for="phonenumber">enter your phone number:</label>
+        <input type="number" required>
+
+        <label for="address">enter your address:</label>
+        <textarea name="address" id="address" reqired></textarea>
+
         <label for="foodName">Food Name:</label>
         <input type="text" id="foodName" name="foodName" required>
 
         <label for="foodDescription">Description:</label>
-        <textarea id="foodDescription" name="foodDescription" required></textarea>   
-
-
+        <textarea id="foodDescription" name="foodDescription" required></textarea>  
+        
         <label for="foodPrice">Price:</label>
         <input type="number" id="foodPrice" name="foodPrice" step="0.01" required>
 
         <label for="foodImage">Image:</label>
         <input type="file" id="foodImage" name="foodImage" accept="image/*">
 
-        <button type="submit">List Your Food</button>
+        <button type="submit"><a href="thankyou.html">submit</a></button>
     </form>
 </body>
 </html>
